Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6535

updating fsname and index wth different orders have problems

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      Updating fsname with following command failed:
      tunefs.lustre --fsname lustre --writeconf /dev/mgs

      But using following command succeed:
      tunefs.lustre --writeconf --fsname lustre /dev/mgs

      IT turned out this is because of options parsing order,
      but actually, we should let both two ways work, so fix is also simple to
      do sanity check after we have parsed all options.

            emoly.liu Emoly Liu
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: