LU-6535 utils: fix updating index and fsname

We should do whether we can update index and fsname checks after
we have done all options parsing, otherwise, we failed this command:
tunefs.lustre --fsname=lustre --writeconf /dev/mgs
but succeed with following command:
tunefs.lustre --writeconf --fsname=lustre /dev/mgs

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: Iadeaad1a6245c58214330c544df245b532f42372